--- a/native-client/package.json
+++ b/native-client/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
-    "expo": "~37.0.3",
+    "expo": "^37.0.12",
     "expo-image-picker": "~8.1.0",
     "expo-location": "^8.1.0",
     "expo-permissions": "~8.1.0",
