--- a/react-client/package.json
+++ b/react-client/package.json
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
     "grommet": "^2.13.0",
     "grommet-icons": "^4.4.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1"
   },
   "scripts": {
