--- a/native-client/package.json
+++ b/native-client/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "expo": "^37.0.12",
     "expo-image-picker": "~8.1.0",
+    "expo-linear-gradient": "~8.1.0",
     "expo-location": "^8.1.0",
     "expo-permissions": "~8.1.0",
     "firebase": "^7.14.6",
@@ -26,7 +27,8 @@
     "react-navigation-stack": "^2.5.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
