--- a/react-client/package.json
+++ b/react-client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "grommet": "^2.13.0",
     "grommet-icons": "^4.4.0",
     "node-sass": "^4.14.1",
@@ -15,8 +16,7 @@
     "react-map-gl": "^5.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16",
-    "styled-components": "^5.1.1"
+    "react-scroll": "^1.7.16"
   },
   "scripts": {
     "start": "react-scripts start",
