added heat map layer and trips layers Deck gl

--- a/react-client/package.json
+++ b/react-client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@deck.gl/aggregation-layers": "^8.1.9",
     "@deck.gl/core": "^8.1.9",
+    "@deck.gl/geo-layers": "^8.1.9",
     "@deck.gl/layers": "^8.1.9",
+    "@deck.gl/mesh-layers": "^8.1.9",
     "@deck.gl/react": "^8.1.9",
     "@storybook/react": "^5.3.19",
     "@testing-library/jest-dom": "^4.2.4",
