--- a/react-client/package.json
+++ b/react-client/package.json
@@ -23,7 +23,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
-    "styled-components": "^5.1.1"
+    "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
